tests/baselines/reference/wrappedAndRecursiveConstraints.errors.txt
wrappedAndRecursiveConstraints.ts(14,5): error TS2322: Type 'null' is not assignable to type 'Foo'.


==== wrappedAndRecursiveConstraints.ts (1 errors) ====
    // no errors expected
    
    class C<T extends Date> {
        constructor(public data: T) { }
        foo<U extends T>(x: U) {
            return x;
        }
    }
    
    interface Foo extends Date {
        foo: string;
    }
    
    var y: Foo = null;
        ~
!!! error TS2322: Type 'null' is not assignable to type 'Foo'.
    var c = new C(y);
    var r = c.foo(y);